--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "makeTodos",
   "short_name": "makeTodos",
-  "start_url": "/index.html",
+  "start_url": "/",
   "icons": [
     {
       "src": "icons/manifest-icon-192.png",
