--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "name": "makeTodos",
   "short_name": "makeTodos",
   "start_url": "/index.html",
+  "scope": ".",
   "icons": [
     {
       "src": "icons/manifest-icon-192.png",
